--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "mdbootstrap": "^4.5.6",
     "rxjs": "~6.6.0",
+    "screenfull": "^3.3.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
