--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.4",
+    "@angular/cdk": "^12.0.5",
     "@angular/common": "~12.0.4",
     "@angular/compiler": "~12.0.4",
     "@angular/core": "~12.0.4",
     "@angular/forms": "~12.0.4",
+    "@angular/material": "^12.0.5",
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "@material-ui/core": "^4.11.4",
     "lodash": "^4.17.21",
     "mdbootstrap": "^4.5.6",
+    "react": "^17.0.2",
     "rxjs": "~6.6.0",
     "screenfull": "^3.3.0",
     "tslib": "^2.1.0",
