--- a/angular.json
+++ b/angular.json
@@ -27,10 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "src/photobox.scss"
+              "src/styles.scss"
             ],
-            "scripts": ["src/photobox.min.js"]
+            "scripts": [ ]
           },
           "configurations": {
             "production": {
