--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
     "@material-ui/core": "^4.11.4",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.21",
     "mdbootstrap": "^4.5.6",
+    "ngx-gallery-9": "^1.0.6",
     "react": "^17.0.2",
     "rxjs": "~6.6.0",
     "screenfull": "^3.3.0",
