--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "@angular/compiler": "~12.0.4",
     "@angular/core": "~12.0.4",
     "@angular/forms": "~12.0.4",
-    "@angular/material": "^12.0.5",
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
     "@material-ui/core": "^4.11.4",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.3",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.21",
     "mdbootstrap": "^4.5.6",
