--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@angular/platform-browser": "~12.0.4",
     "@angular/platform-browser-dynamic": "~12.0.4",
     "@angular/router": "~12.0.4",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@material-ui/core": "^4.11.4",
     "@ng-bootstrap/ng-bootstrap": "^9.1.3",
+    "angular-bootstrap-md": "^11.1.0",
+    "animate.css": "^4.1.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.21",
+    "mdb-ui-kit": "^3.8.1",
     "mdbootstrap": "^4.5.6",
     "ngx-gallery-9": "^1.0.6",
     "react": "^17.0.2",
